A little bit more tidying up

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-a-beep": "^1.0.7",
-    "react-native-ble-manager": "^7.4.2"
+    "react-native-ble-manager": "^7.4.2",
+    "react-native-progress": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
